ENG-908 fix button background contrast

--- a/src/sass/contents/ContentsFilter.scss
+++ b/src/sass/contents/ContentsFilter.scss
@@ -2,7 +2,8 @@
   margin-top: 30px;
   padding-top: 40px;
   padding-bottom: 10px;
-  background-color: $color-ultra-grey-border;
+  background-color: white;
+  border: $color-ultra-grey-border 1px solid;
   overflow: auto;
 
   & > div > div > .input-group { // sass-lint:disable-line class-name-format
